[tool.poetry]
name = "worklife-test"
version = "0.2.0"
description = ""
authors = []


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
SQLAlchemy = "^2.0.22"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
pytest = "^7.4.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
sqlalchemy-utils = "^0.41.1"
freezegun = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
sqlalchemy-stubs = "^0.4"
